<resources>
    <string name="app_name">Proyecto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- bottom_navbar -->
    <string name="profile_bottom_navbar">Perfil</string>
    <string name="tutorials_bottom_navbar">Tutoriales</string>
    <string name="scan_bottom_navbar">Reciclar</string>
    <string name="encyclopedia_bottom_navbar">Enciclopedia</string>
    <string name="quiz_bottom_navbar">Trivia</string>


    <!-- textos encyclopedia -->
    <string name="encyclopedia_Aluminio">Aluminio</string>
    <string name="encyclopedia_Bolsa">Bolsas</string>
    <string name="encyclopedia_Cables">Cables</string>
    <string name="encyclopedia_Vidrio">Vidrio</string>
    <string name="encyclopedia_Carton">Cartón</string>
    <string name="encyclopedia_Papel">Papel</string>
    <string name="encyclopedia_Lata">Lata</string>
    <string name="encyclopedia_Empaques_AM">Empaques Alimentos Mascotas</string>
    <string name="encyclopedia_Chatarra">Chatarra</string>
    <string name="encyclopedia_PET">PET</string>
    <string name="encyclopedia_Revistas">Revistas</string>
    <string name="encyclopedia_Aceite_Vegetal">Aceite Vegetal Usado</string>
    <string name="encyclopedia_Celulares">Celulares y Accesorios</string>
    <string name="encyclopedia_Pilas">Pilas</string>
    <string name="encyclopedia_Sanitarios">Sanitarios</string>
    <string name="encyclopedia_Plastico_N7">Plástico No.7</string>
    <string name="encyclopedia_Madera">Madera</string>

    <!-- Titulo y descripción de Vista enciclopedia-->
    <string name="encyclopedia_Title">Materiales</string>
    <string name="encyclopedia_Description">Aquí encontraras información de diversos materiales para conocer conocer más sobre ellos.</string>
    <string name="encyclopedia_Instruction">Haz click en unos de los materiales para informarte.</string>
    <!-- textos tutoriales -->
    <string name="tutorial_1">¿Como reciclar?</string>
    <string name="tutorial_2">Sr. cabeza de pasto</string>
    <string name="tutorial_3">Títeres con material reciclable</string>
    <string name="tutorial_4">Planta por primera vez</string>
    <string name="tutorial_5">Lapicero de lata</string>
    <string name="tutorial_6">Macetero de material reciclable</string>
    <!-- Titulo y descripción de Vista enciclopedia-->
    <string name="tutorials_Title">Tutoriales</string>
    <string name="tutorials_Description">Aquí encontraras una lista de tutoriales donde prodrás realizar actividades con materiales reciclables.</string>
    <string name="tutorials_Description2">¡RECUERDA! : "Reutiliza - Reduce - Recicla"</string>
    <string name="tutorials_Instruction">Haz click en uno de los tutoriales para realizar una actividad.</string>

    <!--registro-->
    <string name="register_Name">Ingrese su nombre</string>
    <string name="register_Age">¿Cuál es su edad?</string>
    <string name="register_bt">Confirmar datos</string>
    <string name="register_welcome">Bienvenido, antes de comenzar nos gustaría saber más sobre ti, por favor indica como prefieres llamarte en la aplicación</string>


    <!--Scan-->
    <string name="scan_CarView">Vive la experiencia de reciclaje, pulsa el botón reciclar para poder escanear el Código QR del producto a reciclar, veras la información relevante del producto y podrás ver el proceso del reciclaje a través del brazo robótico.</string>
    <string name="scan_btnReciclar">Escanear</string>
    <string name="scan_title_reciclaje">¿Que es el reciclaje? </string>
    <string name="scan_description_reciclaje">El reciclaje consiste en reutilizar los materiales con el objetivo de producir productos nuevos para lograr reducir la utilización de materias primas, conservando así los recursos naturales.</string>
    <string name="scan_question">¿En basurero crees que se recicla este material?</string>
    <string name="scan_alternativeA">A) Basurero 1</string>
    <string name="scan_alternativeB">B) Basurero 2</string>
    <string name="scan_alternativeC">C) Basurero 3</string>


    <!--Perfil-->
    <string name="profile_Level">Nivel de usuario:</string>
    <string name="profile_BtnEdit">Editar Usuarios</string>
    <string name="profile_WelcomeProfie">Bienvenido</string>
    <string name="profile_dialog_level">¡FELICIDADES HAS SUBIDO DE NIVEL!</string>
    <string name="profile_description">Este es tu perfil de usuario, donde podrás ver tus datos personales y barra de nivel, ¡edita tus datos cuando quieras!</string>

    <!--Quiz-->
    <string name="quiz_easy">Trivia nivel principiante</string>
    <string name="quiz_medium">Trivia nivel Intermedio</string>
    <string name="quiz_pro">Trivia nivel difícil</string>
    <string name="quiz_btn_easy">Fácil</string>
    <string name="quiz_btn_medium">Medio</string>
    <string name="quiz_btn_pro">Difícil</string>
    <string name="quiz_card_title">Trivias</string>
    <string name="quiz_card_description">Aquí podrás medir tus conocimientos, contesta una trivia y gana puntos de nivel.</string>
    <string name="quiz_Instruction">Haz click en una de las trivias y mide tus conocimientos.</string>

    <!--DetailScan-->

    <string name="tvDialogPointsCorrect">Tu respuesta es ¡CORRECTA!</string>
    <string name="tvDialogPoints">Has ganado 5 pts de exp</string>

    <string name="tvDialogPointsIncorrect">Tu respuesta es ¡INCORRECTA!</string>
    <string name="tvDialogPoints2">Mejor Suerte para la próxima</string>


    <!--Alerts-->
    <string name="AlertDialog">¿Estás seguro de que quieres salir? perderas todos los puntos ganados.</string>
    <string name="AlertDialogSi">Si</string>
    <string name="AlertDialogNo">No</string>

    <!--Pregunta del dia-->

    <string name="Pregunta_dia">¡PREGUNTA DEL DÍA!</string>
    <string name="Pregunta_dia_btn">Continuar</string>
    <string name="AlertDialog_pregunta_dia">¿Estás seguro de que quieres salir?, no ganaras puntos de experiencia</string>

    <!--Bluetooth-->
    <string name="Bluetooth_back">¿Estás seguro de que quieres salir?, No realizarás el proceso de reciclaje y perderas todos los puntos ganados</string>
    <string name="Bluetooth_permissions">PERMISOS CONCEDIDOS</string>
    <string name="Bluetooth_noPermissions">POR FAVOR CONCEDA LOS PERMISOS PARA UTILIZAR ESTA FUNCIONALIDAD</string>
    <string name="Bluetooth_BTnodisponible">Bluetooth no esta disponible en este dispositivo</string>
    <string name="Bluetooth_cargando">Cargando</string>
    <string name="Bluetooth_BtnActualizar">Presiona el boton actualizar y selecciona el brazo robotico</string>
    <string name="Bluetooth_Activar">Por favor active el bluetooth</string>
    <string name="Bluetooth_Activado">Bluetooth ya se encuentra activado</string>
    <string name="Bluetooth_vicular">Primero vincule un dispositivo Bluetooth</string>
    <string name="Bluetooth_conexionExito">Conexión exitosa</string>
    <string name="Bluetooth_conexionNoExito">Error de conexión</string>
    <string name="Bluetooth_Reciclando">Reciclando</string>
    <string name="Bluetooth_NoReciclando">No se ha podido reciclar, inténtalo nuevamente</string>
    <string name="Bluetooth_ExitoRecilaje">SE HA RECICLADO CORRECTAMENTE</string>
    <string name="Bluetooth_NoExitoRecilaje">ERROR AL RECICLAR EL MATERIAL</string>
    <string name="Bluetooth_sendComand">Comienza el proceso de reciclaje</string>


</resources>
