<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.tutorials.TutorialsFragment"
    android:orientation="vertical"
    android:background="@color/background"
    >

      <androidx.cardview.widget.CardView
          android:id="@+id/cvStringTutorials"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:backgroundTint="@color/background_card"
          app:cardCornerRadius="16dp"
          android:layout_margin="8dp"
          android:elevation="8dp"
          >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >

            <TextView
                android:id="@+id/tvTitleTutorials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/tutorials_Title"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/ebgaramond_variablefont_wght"
                android:textSize="26dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvDescriptionTutorials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/tutorials_Description"
                android:justificationMode="inter_word"
                android:textColor="@color/text_color"
                android:fontFamily="@font/garamond_italic_variablefont_wght"
                android:textSize="16dp"
                android:padding="16dp"
                />
            <TextView
                android:id="@+id/tvDescriptionTutorials2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/tutorials_Description2"
                android:justificationMode="inter_word"
                android:textColor="@color/text_color"
                android:fontFamily="@font/garamond_italic_variablefont_wght"
                android:textSize="16dp"
                android:gravity="center"
                android:padding="16dp"
                />



         </LinearLayout>

      </androidx.cardview.widget.CardView>

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvTutorials"
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:layout_constraintTop_toBottomOf="@+id/cvStringTutorials"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>