<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questionday.QuestionDay">



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvcontainerQuestionDay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        android:backgroundTint="@color/background_card">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            >
            <ImageView
                android:id="@+id/ivQuestionDayClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/cerrar"
                android:padding="24dp"
                app:tint="@color/color_navBar"
                />
            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivQuestionDayClose">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        >
                        <TextView
                            android:id="@+id/tvPreguntadelDia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Pregunta_dia"
                            android:textSize="26sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-black"
                            android:textColor="@color/text_color"
                            ></TextView>
                        <ImageView
                            android:id="@+id/ivStateAnswer"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/estrella"
                            app:tint="@color/color_navBar"
                            android:layout_gravity="center"/>
                    </LinearLayout>


                    <ProgressBar
                        android:id="@+id/pbQuestionDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminateTint="@color/color_navBar"

                       />

                    <TextView
                        android:id="@+id/tvQuestionDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/ubuntu_title"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginHorizontal="16dp"
                        android:textColor="@color/text_color"
                        tools:text="@string/scan_question" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvQuestionDayAlternativeA"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="16dp"
                        app:strokeWidth="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/tvQuestionDayAlternativeA"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu_light"
                                android:gravity="center"
                                android:textColor="@color/text_color"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                tools:text="@string/scan_alternativeA" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvQuestionDayAlternativeB"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="16dp"
                        app:strokeWidth="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/tvQuestionDayAlternativeB"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu_light"
                                android:gravity="center"
                                android:textColor="@color/text_color"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                tools:text="@string/scan_alternativeA" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvQuestionDayAlternativeC"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="16dp"
                        app:strokeWidth="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/tvQuestionDayAlternativeC"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu_light"
                                android:gravity="center"
                                android:textColor="@color/text_color"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                tools:text="@string/scan_alternativeA" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvQuestionDayAlternativeD"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="16dp"
                        app:strokeWidth="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/tvQuestionDayAlternativeD"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu_light"
                                android:gravity="center"
                                android:textColor="@color/text_color"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                tools:text="@string/scan_alternativeA" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>